@@ -4,4 +4,9 @@ This is another game I made during the senior year of high school.
 The program was made using Java on the Greenfoot IDE.
 
 This game works almost exactly like every other 2048 game out there, just a lot more primative since this is something I made as a side final project.
-I dont have the compiled version of this since I dont have greenfoot on my current setup so the compiled executable Jar file is not on here.
+
+To actually run it you will have to enter a command similar to this:
+
+"C:\Program Files\Greenfoot\jdk\bin\java.exe" -cp "C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\Jake\OneDrive\Desktop\Old Coding Stuff\2048 Final Project.jar" --module-path "C:\Program Files\Greenfoot\lib\javafx\lib" --add-modules=ALL-MODULE-PATH greenfoot.export.GreenfootScenarioApplication
+
+but instead based around your computer, however it is alot easier to just install greenfoot, generate a newboard() if the game isnt working and run it. https://www.greenfoot.org/doc/run_standalone
